[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI/Help.gd" type="Script" id=1]
[ext_resource path="res://Assets/Style/Pixellari_style.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Style/button_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/UI/Help/BasicRules.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Style/button_styleboxflat_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/MenuBg.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/Help/Attack.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/Help/Defence.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI/Help/Explosion.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/Help/Building.tscn" type="PackedScene" id=10]

[node name="Help" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="HBoxContainer" type="PanelContainer" parent="."]
self_modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.5
margin_top = -267.0
margin_right = 195.5
margin_bottom = 267.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 384.0
margin_bottom = 527.0
custom_constants/separation = 30
alignment = 1

[node name="BasicRules" type="Button" parent="HBoxContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 45.0
margin_right = 377.0
margin_bottom = 107.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Basic rules"

[node name="Building" type="Button" parent="HBoxContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 137.0
margin_right = 377.0
margin_bottom = 199.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Building"

[node name="StrikingMushroom" type="Button" parent="HBoxContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 229.0
margin_right = 377.0
margin_bottom = 291.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Attack"

[node name="ProtectiveMushroom" type="Button" parent="HBoxContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 321.0
margin_right = 377.0
margin_bottom = 383.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Defence"

[node name="UnstableMushroom2" type="Button" parent="HBoxContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 413.0
margin_right = 377.0
margin_bottom = 475.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Explosion"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 188.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Back" type="Button" parent="MarginContainer2" groups=["ui_buttons"]]
margin_left = 20.0
margin_top = 20.0
margin_right = 216.0
margin_bottom = 82.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "K_BACK"

[node name="BasicRulesHelp" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AttackHelp" parent="." instance=ExtResource( 7 )]
visible = false

[node name="DefenceHelp" parent="." instance=ExtResource( 8 )]
visible = false

[node name="ExplosionHelp" parent="." instance=ExtResource( 9 )]
visible = false

[node name="BuildingHelp" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="pressed" from="HBoxContainer/VBoxContainer/BasicRules" to="." method="_on_BasicRules_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Building" to="." method="_on_Building_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StrikingMushroom" to="." method="_on_StrikingMushroom_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ProtectiveMushroom" to="." method="_on_ProtectiveMushroom_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/UnstableMushroom2" to="." method="_on_UnstableMushroom_pressed"]
[connection signal="pressed" from="MarginContainer2/Back" to="." method="_on_Back_pressed"]
